<resources>
    <string name="app_name">Digital Voting Pass</string>
   
    <!--Manual Input-->
    <string name="title_activity_manual_input">Manual input</string>
    <string name="submit">Submit</string>
    <string name="manual_input_button">Manual input document details</string>
    <string name="manInputSubmit">Submit</string>
    <string name="docNum">Document number</string>
    <string name="expiryDate">Expiry date</string>
    <string name="dateBirth">Date of birth</string>
    <string name="hintDocNum">XXP100154</string>
    <string name="hintExpiryDate">yymmdd</string>
    <string name="hintDateBirth">yymmdd</string>
    <string name="choice">or</string>
    <string name="errFormatDocNum">Input of document number is not correct, please recheck your input.</string>
    <string name="errFormatExpiryDate">Please fill in the expiry date of the document in the yymmdd format.</string>
    <string name="errFormatDateBirth">Please fill in the date of birth in the yymmdd format.</string>
    <string name="errInputDocNum">Please fill in the document number.</string>
    <string name="errInputExpiryDate">Please fill in the expiry date of the document.</string>
    <string name="errInputDateBirth">Please fill in the date of birth.</string>
    <string name="description_info">Info</string>
    <string name="request_permission">This sample needs camera permission.</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>
    <string-array name="months_array">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>

    <!-- OCR Scanning -->
    <string name="ocr_switch_to_manual">Manual Input</string>
    <string name="ocr_camera_permission_explanation">Please provide camera permissions in order to scan a document.</string>
    <string name="ocr_camera_error">This device doesn\'t support Camera2 API.</string>
    <string name="ocr_help_text">Scan the text at the bottom of the passport or on the backside of the ID card.</string>
    <string name="storage_permission_explanation">Please provide storage permissions in order to save the blockchain.</string>

    <!--NFC Scanning-->
    <string name="passportconnection">Connect to document</string>
    <string name="nfc_not_supported_error">This device does not support NFC.</string>
    <string name="nfc_disabled_error_snackbar">NFC is needed for the passport connection</string>
    <string name="nfc_disabled_snackbar_action">Turn on NFC</string>
    <string name="nfc_enabled">Please hold the travel document to the back of the device.</string>
    <string name="general_error">Could not connect, please make sure the travel document is compatible.</string>

    <string name="NFC_error">Could not complete NFC scan, please try again.</string>
    <string name="start_con_button">Start ID connection</string>
    <string name="scan_doc_details">Please scan the ID first</string>

    <!--Transaction History-->
    <string name="transaction_history">Transaction history</string>
    <string name="no_transactions_found">No transaction history found</string>

    <string name="wrong_document_details">Document details are not inserted correctly</string>
    <string name="check_input">Check input</string>

    <!--Main Activity-->
    <string name="start_OCR">Scan travel document</string>
    <string name="title_activity_result">Voting pass</string>
    <string name="edit_election">Change election</string>

    <!--Result Activity-->
    <string name="proceed_home">Next voter</string>
    <string name="waiting_confirmation">Waiting for confirmation</string>
    <string name="proceed_cast_vote">Redeem vote</string>
    <string name="cancel_vote">Cancel vote</string>
    <string name="authorization_failed">Authorization failed, do not hand out voting ballot.</string>
    <string name="authorization_succesful">Authorization successful, please confirm.</string>
    <plurals name="authorization_succesful">
        <item quantity="one">Voting pass found, please redeem.</item>
        <item quantity="other">Voting passes found, please redeem.</item>
    </plurals>
    <plurals name="authorization_confirmed">
        <item quantity="one">Authorization successful</item>
        <item quantity="other">Authorization successful</item>
    </plurals>
    <string name="authorization_wait">Waiting for authorization.</string>
    <string name="address_not_found">This document is not registered for digital voting.</string>

    <string name="has_right">%s has right to:</string>
    <string name="please_hand">Please hand %s</string>
    <string name="voting_pass">Voting pass</string>
    <plurals name="voting_ballots">
        <item quantity="one">voting ballot</item>
        <item quantity="other">voting ballots</item>
    </plurals>

    <string name="gender_male">Mr.</string>
    <string name="gender_female">Ms.</string>
    <string name="gender_unspecified">Unspecified</string>
    <string name="gender_unknown">Unknown</string>

    <!--Election Choice-->
    <string name="search">Search</string>
    <string name="election_choice">Choose election</string>
    <string name="election">election</string>
    <string name="tweedekamer">Parliament election</string>
    <string name="provinciaal">Provincial election</string>
    <string name="gemeente">Municipal election</string>
    <string name="waterschap">Water board election</string>

    <!--Splash Activity-->
    <string name="downloading_text">Downloading...</string>
    <string name="initializing_text">Initializing...</string>
    <string name="please_enable_connect_message">Please enable network connection</string>
    <string name="no_connection">No Network</string>
    <string name="go_network_settings">WIFI Settings</string>
    <string-array name="init_array">
        <item>Initializing</item>
        <item>\u00A0Initializing.</item>
        <item>\u00A0\u00A0Initializing..</item>
        <item>\u00A0\u00A0\u00A0Initializing...</item>
    </string-array>

    <!--Transaction History-->
    <string name="transaction_received_item_format_title">Received %1$d vote \n%2$s %3$s</string>
    <string name="transaction_received_item_format_detail">From %s</string>
    <string name="transaction_sent_item_format_title">Sent %1$d vote \n%2$s %3$s</string>
    <string name="transaction_sent_item_format_detail">To %s</string>
    <string-array name="address_array">
        <item>1GoqgbPZUV2yuPZXohtAvB2NZbjcew8Rk93mMn|Government</item>
    </string-array>

    <string name="shared_preferences_key_election">com.digitalvotingpass.ELECTION_OBJECT_KEY</string>
    <string name="shared_preferences_file">com.digitalvotingpass.shared</string>
</resources>
