<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.digitalvotingpass.digitalvotingpass.MainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="3"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <android.support.v7.widget.Toolbar
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/govDarkBlue"
        android:elevation="4dp"
        android:theme="@style/AppBarOverlay"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="8dp" />

    <TextView
        android:id="@+id/result_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp" />

    <Button
        android:id="@+id/start_ocr"
        android:layout_height="0dp"
        android:layout_width="wrap_content"
        android:layout_weight="1"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:text="@string/start_OCR" />

    <Button
        android:id="@+id/manual_input_button"
        android:layout_height="0dp"
        android:layout_width="wrap_content"
        android:layout_weight="1"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:text="@string/manual_input_button"/>

    <Button
        android:layout_height="0dp"
        android:layout_width="wrap_content"
        android:layout_weight="1"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:text="@string/start_con_button"
        android:onClick="startReading" />
</LinearLayout>
