<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.digitalvotingpass.digitalvotingpass.MainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/govDarkBlue"
        android:elevation="4dp"
        android:theme="@style/AppBarOverlay"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="8dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/authorization"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textAlignment="center"
            android:padding="16dp"/>

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/authorization"
            android:layout_centerInParent="true"
            android:layout_margin="16dp"
            card_view:cardElevation="8dp"
            card_view:cardCornerRadius="2dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_above="@id/divider"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/voter_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textAlignment="center"
                        android:padding="16dp"
                        android:textSize="14sp"
                        android:text="@string/has_right"/>
                    <TextView
                        android:id="@+id/voting_pass_amount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textAlignment="center"
                        android:textSize="45sp"
                        android:textStyle="bold"
                        android:textColor="@color/govDarkBlue"
                        android:text="0"/>
                    <TextView
                        android:id="@+id/voting_passes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textAlignment="center"
                        android:padding="16dp"
                        android:textSize="14sp"
                        android:textColor="@color/govDarkBlue"
                        android:text="@string/voting_passes"/>
                </LinearLayout>
                <View
                    android:id="@+id/divider"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:background="@android:color/darker_gray" />
                <Button
                    android:id="@+id/transactionHistory"
                    android:layout_width="match_parent"
                    android:layout_height="36dp"
                    style="?android:attr/borderlessButtonStyle"
                    android:background="@drawable/card_button"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_gravity="bottom|center"
                    android:textColor="@color/govTextBlue"
                    android:text="@string/transaction_history" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <Button
            android:id="@+id/proceed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/blue_button_bottom"
            android:layout_alignParentBottom="true"
            android:textColor="@android:color/white"
            android:text="@string/proceed_home"/>
    </RelativeLayout>
</LinearLayout>
